logs/collective.ads.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/ads'...
Compiling './lib/python3.5/site-packages/collective/ads/__init__.py'...
***   File "./lib/python3.5/site-packages/collective/ads/__init__.py", line 64
    print 'Customization policy for Ads installed'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/ads/admin'...
Listing './lib/python3.5/site-packages/collective/ads/browser'...
Listing './lib/python3.5/site-packages/collective/ads/browser/images'...
Listing './lib/python3.5/site-packages/collective/ads/browser/stylesheets'...
Listing './lib/python3.5/site-packages/collective/ads/browser/templates'...
Listing './lib/python3.5/site-packages/collective/ads/content'...
Listing './lib/python3.5/site-packages/collective/ads/profiles'...
Listing './lib/python3.5/site-packages/collective/ads/profiles/default'...
Listing './lib/python3.5/site-packages/collective/ads/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/ads/skins'...
Listing './lib/python3.5/site-packages/collective/ads/skins/ads_images'...
Listing './lib/python3.5/site-packages/collective/ads/skins/ads_templates'...
Listing './lib/python3.5/site-packages/collective.ads-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
